manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-get-task-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-get-task-api
  template:
    metadata:
      labels:
        app: todo-get-task-api
    spec:
      containers:
      - name: todo-get-task-api
        image: blibacr4829.azurecr.io/todo-get-tasks-api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
